# TemporalCorr-MetaNet

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: __init__.py  default.py
configs/experiment_configs/: egybcd.yaml  levircd.yaml  s2looking.yaml  whu.yaml
models/: __init__.py  atsm.py  backbone.py  decoder.py  mcb.py  meta_learner.py  ptcf.py  temporalcorr_metanet.py
scripts/: __init__.py  ablation_study.py  cross_dataset_eval.py  evaluate.py  train.py
tests/: __init__.py  test_data.py  test_losses.py  test_models.py
utils/: __init__.py  losses.py  metrics.py  visualization.py
