[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporalcorr-metanet"
version = "1.0.0"
description = "Parametric Temporal Correlation Fusion Network for Few-Shot Remote Sensing Change Detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Research Team", email = "research@example.com"}
]
keywords = [
    "deep-learning",
    "remote-sensing",
    "change-detection",
    "few-shot-learning",
    "meta-learning",
    "pytorch",
    "computer-vision"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "opencv-python>=4.5.0",
    "Pillow>=9.0.0",
    "albumentations>=1.0.0",
    "pyyaml>=6.0",
    "tensorboard>=2.10.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/username/TemporalCorr-MetaNet"
Documentation = "https://github.com/username/TemporalCorr-MetaNet#readme"
Repository = "https://github.com/username/TemporalCorr-MetaNet.git"
Issues = "https://github.com/username/TemporalCorr-MetaNet/issues"

[project.scripts]
tcm-train = "scripts.train:main"
tcm-eval = "scripts.evaluate:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "notebooks*", "docs*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
